Examples/Ingress/basic-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
      - name: nginx
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: index
        configMap:
          name: service-content-1

---
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: service-1
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-auth
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - test.local
      secretName: tls-secret
  rules:
    - host: test.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-1
              port:
                number: 80
