Examples/Ingress/basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
      - name: nginx
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: index
        configMap:
          name: service-content-1

---
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: service-1
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-2
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
      - name: nginx
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: index
        configMap:
          name: service-content-2

---
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    app: service-2
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: basic
    http:
      paths:
      - path: /svc/1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-1
            port:
              number: 80
      - path: /svc/2(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-2
            port:
              number: 80
